<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TargetActivity"
    android:background="@color/Primary"
    android:id="@+id/activity_target">

    <LinearLayout
        android:id="@+id/TopBarTarget"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:theme="@style/Theme.Kopi_Hawa.AppBarOverlay"
        tools:ignore="MissingConstraints"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="@dimen/nav_header_vertical_spacing"
        android:paddingTop="8dp"
        android:background="@color/orange">


        <ImageButton
            android:id="@+id/btnBackTargetActivity"
            android:layout_width="60dp"
            android:layout_height="38dp"
            android:contentDescription="@string/btnBackTarget"
            android:paddingStart="@dimen/activity_vertical_margin"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:layout_width="269dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"
            android:text="@string/TargetActivityText"
            android:textAlignment="center"
            android:textColor="@color/Primary"
            android:textSize="25sp"
            android:textStyle="bold"/>


    </LinearLayout>


    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/halfpiechart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/deviderTarget"
        app:layout_constraintTop_toBottomOf="@+id/TopBarTarget" />

    <View
        style="@style/Divider.Horizontal"
        android:id="@+id/deviderTarget"
        android:layout_width="match_parent"
        android:layout_marginStart="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/activity_target"
        app:layout_constraintTop_toBottomOf="@+id/TopBarTarget"
        app:layout_constraintVertical_bias="0.45"
        app:layout_editor_absoluteX="@dimen/activity_horizontal_margin" />

    <RelativeLayout
        android:id="@+id/tableSuggest"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deviderTarget"
        android:background="@drawable/background_orange"
        >

        <TextView
            android:id="@+id/TextToday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="210dp"
            android:text="@string/TableText"
            android:textAlignment="center"
            android:textAppearance="?android:headerAmPmTextAppearance"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/TableNumber"
            android:textAlignment="center"
            android:textSize="150sp"
            android:layout_marginTop="30dp"
            android:textAppearance="?actionBarStyle"/>



    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>